# SDL-GameTemplate

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/: settings.local.json
assets/: config.ini
src/: main.cpp
src/Base/Config/: ConfigParser.cpp  ConfigParser.hpp  ParserBase.hpp  ParserIni.cpp  ParserIni.hpp
src/Base/File/: File.cpp  File.hpp
src/Base/Util/: Color.hpp  Constants.hpp  Random.cpp
src/Game/: Config.hpp  Error.hpp  Game.cpp  Game.hpp  Random.hpp  Scene.hpp  SceneDemo.cpp  SceneDemo.hpp  Settings.cpp  Settings.hpp
